[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/GameplayScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ShopScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/pp_lcd_mat.tres" type="Material" id=5]
[ext_resource path="res://Scenes/Debug.gd" type="Script" id=6]
[ext_resource path="res://Scenes/TransitionManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shaders/pp_dither.tres" type="Material" id=8]
[ext_resource path="res://Scenes/ViewportContainerPassthruInput.gd" type="Script" id=9]

[node name="Node" type="Node"]

[node name="lcdEffect" type="ViewportContainer" parent="."]
pause_mode = 2
material = ExtResource( 5 )
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 9 )

[node name="Viewport" type="Viewport" parent="lcdEffect"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Dithering" type="ViewportContainer" parent="lcdEffect/Viewport"]
pause_mode = 2
material = ExtResource( 8 )
margin_right = 320.0
margin_bottom = 240.0
stretch = true
script = ExtResource( 9 )

[node name="Viewport" type="Viewport" parent="lcdEffect/Viewport/Dithering"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Main" type="Spatial" parent="lcdEffect/Viewport/Dithering/Viewport"]
pause_mode = 1
script = ExtResource( 3 )

[node name="GameplayScene" parent="lcdEffect/Viewport/Dithering/Viewport/Main" instance=ExtResource( 1 )]

[node name="TitleScene" parent="lcdEffect/Viewport/Dithering/Viewport/Main" instance=ExtResource( 2 )]

[node name="ShopScene" parent="lcdEffect/Viewport/Dithering/Viewport/Main" instance=ExtResource( 4 )]
visible = false

[node name="BlockingUILayer" type="CanvasLayer" parent="lcdEffect/Viewport/Dithering/Viewport/Main"]

[node name="TransitionLayer" type="CanvasLayer" parent="lcdEffect/Viewport/Dithering/Viewport/Main"]
visible = false

[node name="TransitionManager" parent="lcdEffect/Viewport/Dithering/Viewport/Main/TransitionLayer" instance=ExtResource( 7 )]

[node name="DebugLayer" type="CanvasLayer" parent="lcdEffect/Viewport/Dithering/Viewport/Main"]

[node name="Debug" type="Control" parent="lcdEffect/Viewport/Dithering/Viewport/Main/DebugLayer"]
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 6 )

[node name="ActiveLabel" type="Label" parent="lcdEffect/Viewport/Dithering/Viewport/Main/DebugLayer/Debug"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -14.0
text = "DEBUG"
